--- a/server/.env
+++ b/server/.env
@@ -1,2 +1,2 @@
-MONGO_URI=mongodb+srv://Shambhavi:Shambhavi@cluster0.u3lnzej.mongodb.net/
-JWT_SECRET=Shambhavi
+MONGO_URI=mongodb+srv://kartik:kartik@cluster0.tdwlgsp.mongodb.net/
+JWT_SECRET=kartik
