--- a/server/.env
+++ b/server/.env
@@ -1,3 +1,3 @@
-MONGO_URI=mongodb://localhost:27017/tender-generator
-JWT_SECRET=your-super-secret-jwt-key
+MONGO_URI=mongodb+srv://kartik:kartik@cluster0.tdwlgsp.mongodb.net/
+JWT_SECRET=kartik
 PORT=5000
